# PM2000-NEW

./: .gitignore  AI_API_REVIEW_REPORT.md  AI_Session_Log_2026-03-08.md  PRESENTATION_REPORT.md  README-WINDOWS.md  README.md  SINGLE_FALLBACK_MODE_GUIDE.md  build-pi.sh  build-windows.bat  build.sh  setup-dev.bat  setup-dev.ps1  start-web.bat  start-web.sh  start-windows.bat  start.sh
backend/: .env.example  ai_analyzer.py  backend-server.spec  energy_management.py  fault_engine.py  llm_parallel.py  main.py  pm2230_client.py  predictive_maintenance_external.py  proxy_test.py  test_chat_stream.py  test_main.py  test_phase4.py  test_usb_meter.py
backend/core/: state.py
backend/pm2000-proxy/: .env.example  gen_app_key.py  main.py  requirements.txt
backend/pm2000_core/: Cargo.toml  pyproject.toml
backend/pm2000_core/src/: anomaly.rs  cache.rs  decoder.rs  fault_engine.rs  lib.rs  modbus_reader.rs
backend/routes/: ai.py  line_webhook.py  system.py
backend/services/: modbus_service.py
frontend/: next.config.ts
frontend/.next/dev/: prerender-manifest.json  trace
frontend/app/: page.tsx
frontend/components/common/: AlertToaster.tsx  ChatPanel.tsx
frontend/scripts/: generate-report-svg.mjs
