[package]
name = "pm2000_core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pm2000_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }
once_cell = "1.20.2"

# Phase 4B: Modbus Reader dependencies
serialport = "4.3.0"
byteorder = "1.5.0"
